Fix area page horizontal scroll bug on narrow screens

--- a/hub/static/css/_charts.scss
+++ b/hub/static/css/_charts.scss
@@ -16,6 +16,7 @@ table.js-chart {
 
     .chartwrapper + & {
         @include visually-hidden;
+        display: block; // visually-hidden mixin doesn’t work on display:table elements!
     }
 }
 
